[gd_scene load_steps=7 format=2]

[ext_resource path="res://fdsad/Action RPG Resources/Menu.gd" type="Script" id=1]
[ext_resource path="res://fdsad/nedladdning.jpeg" type="Texture" id=2]

[sub_resource type="Theme" id=6]

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 307, 164 )

[sub_resource type="Theme" id=5]
Button/styles/normal = SubResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
theme = SubResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.5
margin_top = -62.0
margin_right = 31.5
rect_scale = Vector2( 1.54521, 0.876272 )
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 14.0
theme = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.819608, 0.0901961, 0.0901961, 1 )

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 38.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 63.0
margin_bottom = 62.0
text = "Quit"

[node name="Sprite" type="Sprite" parent="."]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
